[package]
authors = ["Joelton D. Junior <joeltondjunior@freedxm.com>"]
edition = "2021"
name = "elo_tracker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11", features = ["json"]}
serenity = {version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = {version = "1.20.0", features = ["full"]}
serde_json = "1.0.85"