[package]
authors = ["Joelton D. Junior <joeltondjunior@freedxm.com>"]
edition = "2021"
name = "tier_tracker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
reqwest = {version = "0.11", features = ["json"]}
serde_json = "1.0"
serenity = {version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
firestore = {version = "0.11"}
tokio = {version = "1.21", features = ["full"]}
serde = "1.0.145"
